feat: add admin sessions and authentication
